# gtestexample

./: CMakeLists.txt  LICENSE  README.md  main.cc
benchmarks/: main.cpp
cmake/: GoogleBench.cmake
src/: library.cpp
test/: test.cpp
